--- a/CORSO HACKERGEN/index.html
+++ b/CORSO HACKERGEN/index.html
@@ -17,7 +17,13 @@
     <body class="safe-area spaced-column">
         <!-- Per creare menù (header) -->
         <nav>
-            <div class="logo">Nicola Sirtoli</div>
+            <div class="logo"><a href="./index.html">Nicola Sirtoli</a></div>
+
+            <input type="checkbox" class="toggler">
+                <div class="burger-menu">
+                    <div></div>
+                </div>
+
             <div class="menu">
                 <!-- Creazione di link verso le altre pagine -->
                 <a class="menu-item active" href="./index.html">Home</a>
@@ -28,7 +34,10 @@
         </nav>
 
         <div class="content">
-            <img class="main-image" src="./Assets/foto1.jpg" alt="Homepage picture">
+            <img
+                class="main-image"
+                src="./Assets/foto1.jpg"
+                alt="Homepage picture">
             <h1>BMW S1000RR</h1>
         </div>
         <div class="footer">2025</div>
