--- a/CORSO HACKERGEN/pages/about.html
+++ b/CORSO HACKERGEN/pages/about.html
@@ -17,7 +17,13 @@
     <body class="safe-area spaced-column">
         <!-- Per creare menù (header) -->
         <nav>
-            <div class="logo">Nicola Sirtoli</div>
+            <div class="logo"><a href="./index.html">Nicola Sirtoli</a></div>
+
+            <input type="checkbox" class="toggler">
+                <div class="burger-menu">
+                    <div></div>
+                </div>
+
             <div class="menu">
                 <!-- Creazione di link verso le altre pagine -->
                 <a class="menu-item" href="../index.html">Home</a>
